--- a/portfolio/boardz/index.html
+++ b/portfolio/boardz/index.html
@@ -105,7 +105,7 @@
     <div class="col-lg-8">
       <div class="content-column-content">
          <h1>Boardz</h1>
-         <p><img src="https://chrismaughan.com/img/portfolio/boardz/boardz_ipad.png" alt="The IPad Version of Boardz" /></p>
+         <p><img src="/img/portfolio/boardz/boardz_ipad.png" alt="The IPad Version of Boardz" /></p>
 
          
       </div>
