--- a/portfolio/fxcomposer/index.html
+++ b/portfolio/fxcomposer/index.html
@@ -105,9 +105,9 @@
     <div class="col-lg-8">
       <div class="content-column-content">
          <h1>NVIDIA FX Composer</h1>
-         <p><img src="https://chrismaughan.com/img/portfolio/fxcomposer/fxcomposer_2.jpg" alt="FXComposer" /></p>
+         <p><img src="/img/portfolio/fxcomposer/fxcomposer_2.jpg" alt="FXComposer" /></p>
 
-<p><img src="https://chrismaughan.com/img/portfolio/fxcomposer/fxcomposer.png" alt="FXComposer" /></p>
+<p><img src="/img/portfolio/fxcomposer/fxcomposer.png" alt="FXComposer" /></p>
 
          
       </div>
