--- a/portfolio/game/index.html
+++ b/portfolio/game/index.html
@@ -105,9 +105,9 @@
     <div class="col-lg-8">
       <div class="content-column-content">
          <h1>Game</h1>
-         <p><img src="https://chrismaughan.com/img/portfolio/game/game.jpg" alt="Game" /></p>
+         <p><img src="/img/portfolio/game/game.jpg" alt="Game" /></p>
 
-<p><img src="https://chrismaughan.com/img/portfolio/game/game_engine.png" alt="Game" /></p>
+<p><img src="/img/portfolio/game/game_engine.png" alt="Game" /></p>
 
          
       </div>
