--- a/portfolio/mazes/index.html
+++ b/portfolio/mazes/index.html
@@ -105,9 +105,9 @@
     <div class="col-lg-8">
       <div class="content-column-content">
          <h1>Mazes</h1>
-         <p><img src="https://chrismaughan.com/img/portfolio/mazes/mazes.png" alt="Mazes" /></p>
+         <p><img src="/img/portfolio/mazes/mazes.png" alt="Mazes" /></p>
 
-<p><img src="https://chrismaughan.com/img/portfolio/mazes/mazes_2.png" alt="Mazes" /></p>
+<p><img src="/img/portfolio/mazes/mazes_2.png" alt="Mazes" /></p>
 
          
       </div>
