--- a/portfolio/raytracer_aa/index.html
+++ b/portfolio/raytracer_aa/index.html
@@ -105,9 +105,9 @@
     <div class="col-lg-8">
       <div class="content-column-content">
          <h1>Ray Tracer</h1>
-         <p><img src="https://chrismaughan.com/img/portfolio/raytracer/raytracer_aa.png" alt="Ray Tracer" /></p>
+         <p><img src="/img/portfolio/raytracer/raytracer_aa.png" alt="Ray Tracer" /></p>
 
-<p><img src="https://chrismaughan.com/img/portfolio/raytracer/raytracer_aa2.png" alt="Ray Tracer" /></p>
+<p><img src="/img/portfolio/raytracer/raytracer_aa2.png" alt="Ray Tracer" /></p>
 
          
       </div>
