--- a/portfolio/stocks/index.html
+++ b/portfolio/stocks/index.html
@@ -105,7 +105,7 @@
     <div class="col-lg-8">
       <div class="content-column-content">
          <h1>Stocks</h1>
-         <p><img src="https://chrismaughan.com/img/portfolio/stocks/stocks.png" alt="Stocks" /></p>
+         <p><img src="/img/portfolio/stocks/stocks.png" alt="Stocks" /></p>
 
          
       </div>
