--- a/portfolio/dxsas/index.html
+++ b/portfolio/dxsas/index.html
@@ -105,7 +105,7 @@
     <div class="col-lg-8">
       <div class="content-column-content">
          <h1>DXSAS</h1>
-         <p><img src="https://chrismaughan.com/img/portfolio/dxsas/dxsas.png" alt="DXSAS" /></p>
+         <p><img src="/img/portfolio/dxsas/dxsas.png" alt="DXSAS" /></p>
 
          
       </div>
