--- a/portfolio/nanovg/index.html
+++ b/portfolio/nanovg/index.html
@@ -105,7 +105,7 @@
     <div class="col-lg-8">
       <div class="content-column-content">
          <h1>NanoVg (D3D Backend)</h1>
-         <p><img src="https://chrismaughan.com/img/portfolio/nanovg/image.png" alt="NanoVg" /></p>
+         <p><img src="/img/portfolio/nanovg/image.png" alt="NanoVg" /></p>
 
          
       </div>
