--- a/portfolio/nveffectsbrowser/index.html
+++ b/portfolio/nveffectsbrowser/index.html
@@ -105,7 +105,7 @@
     <div class="col-lg-8">
       <div class="content-column-content">
          <h1>NVIDIA Effects Browser</h1>
-         <p><img src="https://chrismaughan.com/img/portfolio/nveffectsbrowser/nveffectsbrowser.jpg" alt="NVIDIA Effects Browser" /></p>
+         <p><img src="/img/portfolio/nveffectsbrowser/nveffectsbrowser.jpg" alt="NVIDIA Effects Browser" /></p>
 
          
       </div>
