--- a/portfolio/nvlink/index.html
+++ b/portfolio/nvlink/index.html
@@ -105,7 +105,7 @@
     <div class="col-lg-8">
       <div class="content-column-content">
          <h1>NVLink</h1>
-         <p><img src="https://chrismaughan.com/img/portfolio/nvlink/nvlink.jpg" alt="NVLINK" /></p>
+         <p><img src="/img/portfolio/nvlink/nvlink.jpg" alt="NVLINK" /></p>
 
          
       </div>
