--- a/portfolio/nvshaderdebugger/index.html
+++ b/portfolio/nvshaderdebugger/index.html
@@ -105,7 +105,7 @@
     <div class="col-lg-8">
       <div class="content-column-content">
          <h1>NVIDIA Shader Debugger</h1>
-         <p><img src="https://chrismaughan.com/img/portfolio/nvshaderdebugger/nvshaderdebugger.jpg" alt="NVSHADERDEBUGGER" /></p>
+         <p><img src="/img/portfolio/nvshaderdebugger/nvshaderdebugger.jpg" alt="NVSHADERDEBUGGER" /></p>
 
          
       </div>
