Saved by TiddlyWiki

--- a/wiki/wiki.html
+++ b/wiki/wiki.html
@@ -175,7 +175,7 @@ Error message and password prompt
 
 <li>Example</li>
 
-<li>GettingStarted</li>
+<li>GettingStarted2</li>
 
 <li>Recommended plugins</li>
 
@@ -9723,13 +9723,13 @@ Error message and password prompt
 <div created="20200603081600819" modified="20200603081635443" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20200603081641451" modified="20200603081648403" title="$:/state/tab-2065006209">
+<div created="20200603081641451" modified="20200603082712894" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200603082403243" list="$:/ControlPanel GettingStarted" modified="20200603082403243" title="$:/StoryList">
+<div created="20200603082623642" list="$:/ControlPanel GettingStarted2" modified="20200603082623642" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9745,19 +9745,19 @@ Error message and password prompt
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///C:/site/chrismaughan.com/wiki.html&quot;
+            &quot;text&quot;: &quot;https://chrismaughan.com/wiki/wiki.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
-            &quot;text&quot;: &quot;&quot;
+            &quot;text&quot;: &quot;chrismaughan.com&quot;
         },
         &quot;$:/info/url/hostname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/hostname&quot;,
-            &quot;text&quot;: &quot;&quot;
+            &quot;text&quot;: &quot;chrismaughan.com&quot;
         },
         &quot;$:/info/url/protocol&quot;: {
             &quot;title&quot;: &quot;$:/info/url/protocol&quot;,
-            &quot;text&quot;: &quot;file:&quot;
+            &quot;text&quot;: &quot;https:&quot;
         },
         &quot;$:/info/url/port&quot;: {
             &quot;title&quot;: &quot;$:/info/url/port&quot;,
@@ -9765,7 +9765,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/C:/site/chrismaughan.com/wiki.html&quot;
+            &quot;text&quot;: &quot;/wiki/wiki.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -9773,7 +9773,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/origin&quot;: {
             &quot;title&quot;: &quot;$:/info/url/origin&quot;,
-            &quot;text&quot;: &quot;file://&quot;
+            &quot;text&quot;: &quot;https://chrismaughan.com&quot;
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
@@ -9902,7 +9902,7 @@ Error message and password prompt
 <div bag="default" created="20200513182827588" modified="20200513182912703" revision="0" title="Example" type="text/vnd.tiddlywiki">
 <pre>See the reference link below? You can find a reference to this tiddler also in the [[GettingStarted]].</pre>
 </div>
-<div bag="default" created="20200513173951113" modified="20200513183346456" revision="0" title="GettingStarted" type="text/vnd.tiddlywiki">
+<div bag="default" created="20200513173951113" modified="20200603082637915" revision="0" title="GettingStarted2" type="text/vnd.tiddlywiki">
 <pre>! Krystal - Horizontal Story River
 
 This plugin is an attempt to bring [[Andy Matuschak's Evergreen notes|https://notes.andymatuschak.org/]] system into [[TiddlyWiki|https://tiddlywiki.com/]] that I found after reading articles by [[Anne-Laure Le Cunff|https://nesslabs.com/]].
@@ -9911,10 +9911,10 @@ Thanks both for the inspiration, my (thinking about) notes finally started to be
 
 !! Features
 
-* horizontal story view for tiddlers (show [[Example]] í ½í±‰)
+* horizontal story view for tiddlers (show [[Example]] ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½)
 * bi-directional links at the bottom of each tiddler
 * customizable header instead of sidebar (use tag {{$:/plugins/rmnvsl/krystal/header||$:/core/ui/TagTemplate}} to add new content)
-* nice animations and transitions í ½í°®
+* nice animations and transitions ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 
 !!! Customizable in [[plugin settings|$:/plugins/rmnvsl/krystal/settings]]
 
@@ -9928,7 +9928,7 @@ You can either:
 * save this whole ~TiddlyWiki by clicking the save button {{$:/core/ui/Buttons/save-wiki}}, or
 * add just the ''bare'' plugin by dragging the following link onto your project [[$:/plugins/rmnvsl/krystal]]
 
-!!! í ½íº§ Warning
+!!! ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ Warning
 
 Although it's already possible to use this plugin (I do use it for my notes in the current development stage), it's an early alpha and has several drawbacks. Just to name a few:
 
