--- a/wiki/index.html
+++ b/wiki/index.html
@@ -47,7 +47,7 @@ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
 OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE." />
 <link id="faviconLink" rel="shortcut icon" href="favicon.ico">
-<title>My TiddlyWiki â€” a non-linear personal web notebook</title>
+<title>Chris Maughan â€” a non-linear personal web notebook</title>
 <!--~~ This is a Tiddlywiki file. The points of interest in the file are marked with this pattern ~~-->
 
 <!--~~ Raw markup ~~-->
@@ -158,6 +158,8 @@ Error message and password prompt
 <li>$:/isEncrypted</li>
 
 <li>$:/plugins/rmnvsl/krystal</li>
+
+<li>$:/SiteTitle</li>
 
 <li>$:/state/tab-1749438307</li>
 
@@ -9720,6 +9722,9 @@ Error message and password prompt
     }
 }</pre>
 </div>
+<div created="20200603082802472" modified="20200603082803946" title="$:/SiteTitle">
+<pre>Chris Maughan</pre>
+</div>
 <div created="20200603081600819" modified="20200603081635443" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
@@ -9729,7 +9734,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200603081557182" list="$:/ControlPanel GettingStarted" modified="20200603081557182" title="$:/StoryList">
+<div created="20200603082755398" list="GettingStarted Setup" modified="20200603082755398" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9745,19 +9750,19 @@ Error message and password prompt
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///C:/site/chrismaughan.com/wiki.html&quot;
+            &quot;text&quot;: &quot;https://chrismaughan.com/wiki/&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
-            &quot;text&quot;: &quot;&quot;
+            &quot;text&quot;: &quot;chrismaughan.com&quot;
         },
         &quot;$:/info/url/hostname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/hostname&quot;,
-            &quot;text&quot;: &quot;&quot;
+            &quot;text&quot;: &quot;chrismaughan.com&quot;
         },
         &quot;$:/info/url/protocol&quot;: {
             &quot;title&quot;: &quot;$:/info/url/protocol&quot;,
-            &quot;text&quot;: &quot;file:&quot;
+            &quot;text&quot;: &quot;https:&quot;
         },
         &quot;$:/info/url/port&quot;: {
             &quot;title&quot;: &quot;$:/info/url/port&quot;,
@@ -9765,7 +9770,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/C:/site/chrismaughan.com/wiki.html&quot;
+            &quot;text&quot;: &quot;/wiki/&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -9773,7 +9778,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/origin&quot;: {
             &quot;title&quot;: &quot;$:/info/url/origin&quot;,
-            &quot;text&quot;: &quot;file://&quot;
+            &quot;text&quot;: &quot;https://chrismaughan.com&quot;
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
@@ -9911,10 +9916,10 @@ Thanks both for the inspiration, my (thinking about) notes finally started to be
 
 !! Features
 
-* horizontal story view for tiddlers (show [[Example]] í ½í±‰)
+* horizontal story view for tiddlers (show [[Example]] ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½)
 * bi-directional links at the bottom of each tiddler
 * customizable header instead of sidebar (use tag {{$:/plugins/rmnvsl/krystal/header||$:/core/ui/TagTemplate}} to add new content)
-* nice animations and transitions í ½í°®
+* nice animations and transitions ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 
 !!! Customizable in [[plugin settings|$:/plugins/rmnvsl/krystal/settings]]
 
@@ -9928,7 +9933,7 @@ You can either:
 * save this whole ~TiddlyWiki by clicking the save button {{$:/core/ui/Buttons/save-wiki}}, or
 * add just the ''bare'' plugin by dragging the following link onto your project [[$:/plugins/rmnvsl/krystal]]
 
-!!! í ½íº§ Warning
+!!! ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ Warning
 
 Although it's already possible to use this plugin (I do use it for my notes in the current development stage), it's an early alpha and has several drawbacks. Just to name a few:
 
