--- a/wiki/index.html
+++ b/wiki/index.html
@@ -189,7 +189,7 @@ Error message and password prompt
 
 <li>Example</li>
 
-<li>GettingStarted</li>
+<li>Getting Started</li>
 
 <li>Recommended plugins</li>
 
@@ -10615,9 +10615,9 @@ Error message and password prompt
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
-<pre>yes</pre>
+<pre>no</pre>
 </div>
-<div list="$:/Import GettingStarted" title="$:/StoryList">
+<div list="[[Getting Started]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10793,7 +10793,7 @@ Error message and password prompt
 <div bag="default" created="20200513182827588" modified="20200513182912703" revision="0" title="Example" type="text/vnd.tiddlywiki">
 <pre>See the reference link below? You can find a reference to this tiddler also in the [[GettingStarted]].</pre>
 </div>
-<div bag="default" created="20200513173951113" modified="20200513183346456" revision="0" title="GettingStarted" type="text/vnd.tiddlywiki">
+<div bag="default" created="20200513173951113" modified="20200603083634091" revision="0" title="Getting Started" type="text/vnd.tiddlywiki">
 <pre>! Krystal - Horizontal Story River
 
 This plugin is an attempt to bring [[Andy Matuschak's Evergreen notes|https://notes.andymatuschak.org/]] system into [[TiddlyWiki|https://tiddlywiki.com/]] that I found after reading articles by [[Anne-Laure Le Cunff|https://nesslabs.com/]].
