Saved by TiddlyWiki

--- a/wiki/index.html
+++ b/wiki/index.html
@@ -47,7 +47,7 @@ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
 OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE." />
 <link id="faviconLink" rel="shortcut icon" href="favicon.ico">
-<title>Chris Maughan — a non-linear personal web notebook</title>
+<title>My TiddlyWiki — a non-linear personal web notebook</title>
 <!--~~ This is a Tiddlywiki file. The points of interest in the file are marked with this pattern ~~-->
 
 <!--~~ Raw markup ~~-->
@@ -152,8 +152,6 @@ Error message and password prompt
 <li>$:/GitHub/Username</li>
 
 <li>$:/isEncrypted</li>
-
-<li>$:/SiteTitle</li>
 
 <li>$:/state/tab-1749438307</li>
 
@@ -9556,34 +9554,31 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200603084416967" modified="20200603084418526" title="$:/GitHub/Filename">
+<div created="20200603084653595" modified="20200603084654884" title="$:/GitHub/Filename">
 <pre>index.html</pre>
 </div>
-<div created="20200603084414078" modified="20200603084415198" title="$:/GitHub/Path">
+<div created="20200603084651075" modified="20200603084651868" title="$:/GitHub/Path">
 <pre>/wiki/</pre>
 </div>
-<div created="20200603084404278" modified="20200603084411663" title="$:/GitHub/Repo">
+<div created="20200603084611413" modified="20200603084616385" title="$:/GitHub/Repo">
 <pre>cmaughan/cmaughan.github.io</pre>
 </div>
-<div created="20200603084358650" modified="20200603084359334" title="$:/GitHub/Username">
+<div created="20200603084526632" modified="20200603084527268" title="$:/GitHub/Username">
 <pre>cmaughan</pre>
 </div>
 <div title="$:/isEncrypted">
 <pre>no</pre>
 </div>
-<div created="20200603084339912" modified="20200603084341206" title="$:/SiteTitle">
-<pre>Chris Maughan</pre>
-</div>
-<div created="20200603084353186" modified="20200603084355464" title="$:/state/tab-1749438307">
+<div created="20200603084519756" modified="20200603084519756" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20200603084356286" modified="20200603084356286" title="$:/state/tab-2065006209">
+<div created="20200603084521283" modified="20200603084521283" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200603084350867" list="$:/ControlPanel GettingStarted" modified="20200603084350867" title="$:/StoryList">
+<div created="20200603084517406" list="$:/ControlPanel GettingStarted" modified="20200603084517406" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
