Saved by TiddlyWiki

--- a/wiki/index.html
+++ b/wiki/index.html
@@ -141,6 +141,8 @@ Error message and password prompt
 
 <p>This <a class="tc-tiddlylink-external" href="https://tiddlywiki.com" rel="noopener noreferrer" target="_blank">TiddlyWiki</a> contains the following tiddlers:</p><p><ul>
 
+<li>$:/config/Plugins/Disabled/$:/plugins/rmnvsl/krystal</li>
+
 <li>$:/core</li>
 
 <li>$:/GitHub/Filename</li>
@@ -187,6 +189,9 @@ Error message and password prompt
 <!--~~ Ordinary tiddlers ~~-->
 
 <div id="storeArea" style="display:none;">
+<div created="20200603085145000" modified="20200603085145000" title="$:/config/Plugins/Disabled/$:/plugins/rmnvsl/krystal">
+<pre>yes</pre>
+</div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="" description="TiddlyWiki5 core" list="readme" name="Core" plugin-priority="0" plugin-type="plugin" title="$:/core" type="application/json" version="5.1.22">
 <pre>{
     &quot;tiddlers&quot;: {
@@ -9714,16 +9719,16 @@ Error message and password prompt
 <div created="20200603084738416" modified="20200603084739752" title="$:/SiteTitle">
 <pre>Chris Maughan</pre>
 </div>
-<div created="20200603084519756" modified="20200603084811670" title="$:/state/tab-1749438307">
+<div created="20200603084519756" modified="20200603085153177" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
 <div created="20200603084521283" modified="20200603084801579" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/Gitea</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
-<pre>yes</pre>
+<pre>no</pre>
 </div>
-<div created="20200603084517406" list="$:/Import $:/ControlPanel GettingStarted" modified="20200603084517406" title="$:/StoryList">
+<div created="20200603085139344" list="$:/core/ui/SideBar/Open $:/core/ui/SideBar/Recent $:/ControlPanel $:/plugins/rmnvsl/krystal" modified="20200603085155790" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
