Saved by TiddlyWiki

--- a/wiki/index.html
+++ b/wiki/index.html
@@ -161,6 +161,8 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
+<li>$:/state/plugin-info-749868030-$:/plugins/rmnvsl/krystal---432838930</li>
+
 <li>$:/state/tab-1749438307</li>
 
 <li>$:/state/tab-2065006209</li>
@@ -189,7 +191,7 @@ Error message and password prompt
 <!--~~ Ordinary tiddlers ~~-->
 
 <div id="storeArea" style="display:none;">
-<div created="20200603085145000" modified="20200603085145000" title="$:/config/Plugins/Disabled/$:/plugins/rmnvsl/krystal">
+<div created="20200603085350489" modified="20200603085350489" title="$:/config/Plugins/Disabled/$:/plugins/rmnvsl/krystal">
 <pre>yes</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="" description="TiddlyWiki5 core" list="readme" name="Core" plugin-priority="0" plugin-type="plugin" title="$:/core" type="application/json" version="5.1.22">
@@ -9719,16 +9721,19 @@ Error message and password prompt
 <div created="20200603084738416" modified="20200603084739752" title="$:/SiteTitle">
 <pre>Chris Maughan</pre>
 </div>
-<div created="20200603084519756" modified="20200603085153177" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Info</pre>
+<div created="20200603085337939" modified="20200603085357824" title="$:/state/plugin-info-749868030-$:/plugins/rmnvsl/krystal---432838930">
+<pre>contents</pre>
+</div>
+<div created="20200603084519756" modified="20200603085317091" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Plugins</pre>
 </div>
 <div created="20200603084521283" modified="20200603084801579" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/Gitea</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
-<pre>no</pre>
+<pre>yes</pre>
 </div>
-<div created="20200603085139344" list="$:/core/ui/SideBar/Open $:/core/ui/SideBar/Recent $:/ControlPanel $:/plugins/rmnvsl/krystal" modified="20200603085155790" title="$:/StoryList">
+<div created="20200603085259033" list="GettingStarted" modified="20200603085322177" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
