--- a/wiki/index.html
+++ b/wiki/index.html
@@ -141,6 +141,16 @@ Error message and password prompt
 
 <p>This <a class="tc-tiddlylink-external" href="https://tiddlywiki.com" rel="noopener noreferrer" target="_blank">TiddlyWiki</a> contains the following tiddlers:</p><p><ul>
 
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/close-all</li>
+
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/fold-all</li>
+
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/home</li>
+
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/new-journal</li>
+
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/refresh</li>
+
 <li>$:/config/Plugins/Disabled/$:/plugins/rmnvsl/krystal</li>
 
 <li>$:/core</li>
@@ -167,6 +177,8 @@ Error message and password prompt
 
 <li>$:/state/tab-2065006209</li>
 
+<li>$:/state/tab/sidebar--595412856</li>
+
 <li>$:/status/RequireReloadDueToPluginChange</li>
 
 <li>$:/StoryList</li>
@@ -191,6 +203,21 @@ Error message and password prompt
 <!--~~ Ordinary tiddlers ~~-->
 
 <div id="storeArea" style="display:none;">
+<div created="20200603090850106" modified="20200603090850106" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/close-all">
+<pre>show</pre>
+</div>
+<div created="20200603090851026" modified="20200603090851689" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/fold-all">
+<pre>hide</pre>
+</div>
+<div created="20200603090847474" modified="20200603090847474" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/home">
+<pre>show</pre>
+</div>
+<div created="20200603090857289" modified="20200603090857289" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/new-journal">
+<pre>show</pre>
+</div>
+<div created="20200603090912441" modified="20200603090912441" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/refresh">
+<pre>show</pre>
+</div>
 <div created="20200603085350489" modified="20200603085350489" title="$:/config/Plugins/Disabled/$:/plugins/rmnvsl/krystal">
 <pre>yes</pre>
 </div>
@@ -9730,10 +9757,13 @@ Error message and password prompt
 <div created="20200603084521283" modified="20200603084801579" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/Gitea</pre>
 </div>
-<div title="$:/status/RequireReloadDueToPluginChange">
-<pre>yes</pre>
+<div created="20200603090610712" modified="20200603090845673" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Tools</pre>
 </div>
-<div created="20200603085259033" list="GettingStarted" modified="20200603085322177" title="$:/StoryList">
+<div title="$:/status/RequireReloadDueToPluginChange">
+<pre>no</pre>
+</div>
+<div list="GettingStarted" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
