Saved by TiddlyWiki

--- a/wiki/index.html
+++ b/wiki/index.html
@@ -47,7 +47,7 @@ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
 OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE." />
 <link id="faviconLink" rel="shortcut icon" href="favicon.ico">
-<title>Chris Maughan — a non-linear personal web notebook</title>
+<title>Chris Maughan 2 — a non-linear personal web notebook</title>
 <!--~~ This is a Tiddlywiki file. The points of interest in the file are marked with this pattern ~~-->
 
 <!--~~ Raw markup ~~-->
@@ -141,6 +141,8 @@ Error message and password prompt
 
 <p>This <a class="tc-tiddlylink-external" href="https://tiddlywiki.com" rel="noopener noreferrer" target="_blank">TiddlyWiki</a> contains the following tiddlers:</p><p><ul>
 
+<li>$:/config/AutoSave</li>
+
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/close-all</li>
 
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/fold-all</li>
@@ -203,6 +205,9 @@ Error message and password prompt
 <!--~~ Ordinary tiddlers ~~-->
 
 <div id="storeArea" style="display:none;">
+<div created="20200603091714099" modified="20200603091714099" title="$:/config/AutoSave">
+<pre>no</pre>
+</div>
 <div created="20200603090850106" modified="20200603090850106" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/close-all">
 <pre>show</pre>
 </div>
@@ -9745,16 +9750,16 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200603084738416" modified="20200603084739752" title="$:/SiteTitle">
-<pre>Chris Maughan</pre>
+<div created="20200603084738416" modified="20200603091622363" title="$:/SiteTitle">
+<pre>Chris Maughan 2</pre>
 </div>
 <div created="20200603085337939" modified="20200603085357824" title="$:/state/plugin-info-749868030-$:/plugins/rmnvsl/krystal---432838930">
 <pre>contents</pre>
 </div>
-<div created="20200603084519756" modified="20200603085317091" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Plugins</pre>
+<div created="20200603084519756" modified="20200603091709707" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20200603084521283" modified="20200603084801579" title="$:/state/tab-2065006209">
+<div created="20200603084521283" modified="20200603091722939" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/Gitea</pre>
 </div>
 <div created="20200603090610712" modified="20200603090845673" title="$:/state/tab/sidebar--595412856">
@@ -9763,7 +9768,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div list="GettingStarted" title="$:/StoryList">
+<div created="20200603091639933" list="$:/ControlPanel GettingStarted" modified="20200603091639933" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
