Saved by TiddlyWiki

--- a/wiki/index.html
+++ b/wiki/index.html
@@ -47,7 +47,7 @@ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
 OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE." />
 <link id="faviconLink" rel="shortcut icon" href="favicon.ico">
-<title>Chris Maughan 2 — a non-linear personal web notebook</title>
+<title>Chris Maughan Wiki — a non-linear personal web notebook</title>
 <!--~~ This is a Tiddlywiki file. The points of interest in the file are marked with this pattern ~~-->
 
 <!--~~ Raw markup ~~-->
@@ -9750,8 +9750,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200603084738416" modified="20200603091622363" title="$:/SiteTitle">
-<pre>Chris Maughan 2</pre>
+<div created="20200603084738416" modified="20200603091739844" title="$:/SiteTitle">
+<pre>Chris Maughan Wiki</pre>
 </div>
 <div created="20200603085337939" modified="20200603085357824" title="$:/state/plugin-info-749868030-$:/plugins/rmnvsl/krystal---432838930">
 <pre>contents</pre>
@@ -9768,7 +9768,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200603091639933" list="$:/ControlPanel GettingStarted" modified="20200603091639933" title="$:/StoryList">
+<div created="20200603091639933" list="$:/ControlPanel GettingStarted" modified="20200603091813983" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
