Saved by TiddlyWiki

--- a/wiki/index.html
+++ b/wiki/index.html
@@ -47,7 +47,7 @@ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
 OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE." />
 <link id="faviconLink" rel="shortcut icon" href="favicon.ico">
-<title>Chris Maughan Wiki — a non-linear personal web notebook</title>
+<title>Chris Maughan — a non-linear personal web notebook</title>
 <!--~~ This is a Tiddlywiki file. The points of interest in the file are marked with this pattern ~~-->
 
 <!--~~ Raw markup ~~-->
@@ -141,8 +141,6 @@ Error message and password prompt
 
 <p>This <a class="tc-tiddlylink-external" href="https://tiddlywiki.com" rel="noopener noreferrer" target="_blank">TiddlyWiki</a> contains the following tiddlers:</p><p><ul>
 
-<li>$:/config/AutoSave</li>
-
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/close-all</li>
 
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/fold-all</li>
@@ -175,6 +173,8 @@ Error message and password prompt
 
 <li>$:/state/plugin-info-749868030-$:/plugins/rmnvsl/krystal---432838930</li>
 
+<li>$:/state/tab--2112689675</li>
+
 <li>$:/state/tab-1749438307</li>
 
 <li>$:/state/tab-2065006209</li>
@@ -191,6 +191,8 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla</li>
 
+<li>New Tiddler</li>
+
 </ul>
 </p>
 
@@ -205,9 +207,6 @@ Error message and password prompt
 <!--~~ Ordinary tiddlers ~~-->
 
 <div id="storeArea" style="display:none;">
-<div created="20200603091714099" modified="20200603091714099" title="$:/config/AutoSave">
-<pre>no</pre>
-</div>
 <div created="20200603090850106" modified="20200603090850106" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/close-all">
 <pre>show</pre>
 </div>
@@ -223,8 +222,8 @@ Error message and password prompt
 <div created="20200603090912441" modified="20200603090912441" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/refresh">
 <pre>show</pre>
 </div>
-<div created="20200603085350489" modified="20200603085350489" title="$:/config/Plugins/Disabled/$:/plugins/rmnvsl/krystal">
-<pre>yes</pre>
+<div created="20200603085350489" modified="20200603092237069" title="$:/config/Plugins/Disabled/$:/plugins/rmnvsl/krystal">
+<pre>no</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="" description="TiddlyWiki5 core" list="readme" name="Core" plugin-priority="0" plugin-type="plugin" title="$:/core" type="application/json" version="5.1.22">
 <pre>{
@@ -9750,25 +9749,28 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200603084738416" modified="20200603091739844" title="$:/SiteTitle">
-<pre>Chris Maughan Wiki</pre>
+<div created="20200603084738416" modified="20200603084739752" title="$:/SiteTitle">
+<pre>Chris Maughan</pre>
 </div>
 <div created="20200603085337939" modified="20200603085357824" title="$:/state/plugin-info-749868030-$:/plugins/rmnvsl/krystal---432838930">
 <pre>contents</pre>
 </div>
-<div created="20200603084519756" modified="20200603091709707" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Saving</pre>
+<div created="20200603092327596" modified="20200603092330476" title="$:/state/tab--2112689675">
+<pre>$:/core/ui/ControlPanel/Basics</pre>
 </div>
-<div created="20200603084521283" modified="20200603091722939" title="$:/state/tab-2065006209">
+<div created="20200603084519756" modified="20200603092314651" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Info</pre>
+</div>
+<div created="20200603084521283" modified="20200603084801579" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/Gitea</pre>
 </div>
-<div created="20200603090610712" modified="20200603090845673" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Tools</pre>
+<div created="20200603090610712" modified="20200603092340405" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200603091639933" list="$:/ControlPanel GettingStarted" modified="20200603091813983" title="$:/StoryList">
+<div created="20200603092229535" list="[[New Tiddler]] $:/ControlPanel GettingStarted" modified="20200603092251389" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9937,6 +9939,9 @@ Error message and password prompt
         }
     }
 }</pre>
+</div>
+<div created="20200603092341586" modified="20200603092347144" tags="" title="New Tiddler">
+<pre></pre>
 </div>
 
 
