Saved by TiddlyWiki

--- a/wiki/index.html
+++ b/wiki/index.html
@@ -141,6 +141,8 @@ Error message and password prompt
 
 <p>This <a class="tc-tiddlylink-external" href="https://tiddlywiki.com" rel="noopener noreferrer" target="_blank">TiddlyWiki</a> contains the following tiddlers:</p><p><ul>
 
+<li>$:/config/AutoSave</li>
+
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/close-all</li>
 
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/fold-all</li>
@@ -207,6 +209,9 @@ Error message and password prompt
 <!--~~ Ordinary tiddlers ~~-->
 
 <div id="storeArea" style="display:none;">
+<div created="20200603092407862" modified="20200603092407862" title="$:/config/AutoSave">
+<pre>no</pre>
+</div>
 <div created="20200603090850106" modified="20200603090850106" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/close-all">
 <pre>show</pre>
 </div>
@@ -9758,10 +9763,10 @@ Error message and password prompt
 <div created="20200603092327596" modified="20200603092330476" title="$:/state/tab--2112689675">
 <pre>$:/core/ui/ControlPanel/Basics</pre>
 </div>
-<div created="20200603084519756" modified="20200603092314651" title="$:/state/tab-1749438307">
+<div created="20200603084519756" modified="20200603092423986" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
-<div created="20200603084521283" modified="20200603084801579" title="$:/state/tab-2065006209">
+<div created="20200603084521283" modified="20200603092412414" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/Gitea</pre>
 </div>
 <div created="20200603090610712" modified="20200603092340405" title="$:/state/tab/sidebar--595412856">
