Saved by TiddlyWiki

--- a/wiki/index.html
+++ b/wiki/index.html
@@ -147,13 +147,33 @@ Error message and password prompt
 
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/fold-all</li>
 
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/full-screen</li>
+
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/home</li>
+
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/manager</li>
+
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/more-page-actions</li>
+
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/new-image</li>
 
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/new-journal</li>
 
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/refresh</li>
 
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/storyview</li>
+
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/tag-manager</li>
+
 <li>$:/config/Plugins/Disabled/$:/plugins/rmnvsl/krystal</li>
+
+<li>$:/config/ViewToolbarButtons/Visibility/$:/core/ui/Buttons/close-others</li>
+
+<li>$:/config/ViewToolbarButtons/Visibility/$:/core/ui/Buttons/fold-bar</li>
+
+<li>$:/config/ViewToolbarButtons/Visibility/$:/core/ui/Buttons/new-journal-here</li>
+
+<li>$:/config/ViewToolbarButtons/Visibility/$:/core/ui/Buttons/permalink</li>
 
 <li>$:/core</li>
 
@@ -177,7 +197,11 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
+<li>$:/state/folded/GettingStarted</li>
+
 <li>$:/state/plugin-info-749868030-$:/plugins/rmnvsl/krystal---432838930</li>
+
+<li>$:/state/tab--1963855381</li>
 
 <li>$:/state/tab--2112689675</li>
 
@@ -186,6 +210,8 @@ Error message and password prompt
 <li>$:/state/tab-2065006209</li>
 
 <li>$:/state/tab/sidebar--595412856</li>
+
+<li>$:/state/tabs/controlpanel/toolbars-1345989671</li>
 
 <li>$:/status/RequireReloadDueToPluginChange</li>
 
@@ -224,7 +250,19 @@ Error message and password prompt
 <div created="20200603090851026" modified="20200603090851689" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/fold-all">
 <pre>hide</pre>
 </div>
+<div created="20200603094011591" modified="20200603094011591" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/full-screen">
+<pre>show</pre>
+</div>
 <div created="20200603090847474" modified="20200603090847474" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/home">
+<pre>show</pre>
+</div>
+<div created="20200603093956159" modified="20200603093956159" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/manager">
+<pre>show</pre>
+</div>
+<div created="20200603094015383" modified="20200603094017767" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/more-page-actions">
+<pre>show</pre>
+</div>
+<div created="20200603093949039" modified="20200603093949039" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/new-image">
 <pre>show</pre>
 </div>
 <div created="20200603090857289" modified="20200603090857289" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/new-journal">
@@ -233,8 +271,26 @@ Error message and password prompt
 <div created="20200603090912441" modified="20200603090912441" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/refresh">
 <pre>show</pre>
 </div>
+<div created="20200603094001967" modified="20200603094001967" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/storyview">
+<pre>show</pre>
+</div>
+<div created="20200603093955538" modified="20200603093957680" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/tag-manager">
+<pre>show</pre>
+</div>
 <div created="20200603085350489" modified="20200603092237069" title="$:/config/Plugins/Disabled/$:/plugins/rmnvsl/krystal">
 <pre>no</pre>
+</div>
+<div created="20200603093906400" modified="20200603093906400" title="$:/config/ViewToolbarButtons/Visibility/$:/core/ui/Buttons/close-others">
+<pre>show</pre>
+</div>
+<div created="20200603093853964" modified="20200603093930940" title="$:/config/ViewToolbarButtons/Visibility/$:/core/ui/Buttons/fold-bar">
+<pre>hide</pre>
+</div>
+<div created="20200603093923108" modified="20200603093926828" title="$:/config/ViewToolbarButtons/Visibility/$:/core/ui/Buttons/new-journal-here">
+<pre>hide</pre>
+</div>
+<div created="20200603093917548" modified="20200603093917548" title="$:/config/ViewToolbarButtons/Visibility/$:/core/ui/Buttons/permalink">
+<pre>show</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="" description="TiddlyWiki5 core" list="readme" name="Core" plugin-priority="0" plugin-type="plugin" title="$:/core" type="application/json" version="5.1.22">
 <pre>{
@@ -10623,13 +10679,19 @@ Error message and password prompt
 <div created="20200603084738416" modified="20200603084739752" title="$:/SiteTitle">
 <pre>Chris Maughan</pre>
 </div>
+<div created="20200603093858246" modified="20200603093901486" title="$:/state/folded/GettingStarted">
+<pre>show</pre>
+</div>
 <div created="20200603085337939" modified="20200603093009259" title="$:/state/plugin-info-749868030-$:/plugins/rmnvsl/krystal---432838930">
 <pre>readme</pre>
+</div>
+<div created="20200603093824963" modified="20200603093828804" title="$:/state/tab--1963855381">
+<pre>$:/core/ui/ControlPanel/Toolbars</pre>
 </div>
 <div created="20200603092327596" modified="20200603092330476" title="$:/state/tab--2112689675">
 <pre>$:/core/ui/ControlPanel/Basics</pre>
 </div>
-<div created="20200603084519756" modified="20200603093004225" title="$:/state/tab-1749438307">
+<div created="20200603084519756" modified="20200603094035327" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Plugins</pre>
 </div>
 <div created="20200603084521283" modified="20200603092804309" title="$:/state/tab-2065006209">
@@ -10638,10 +10700,13 @@ Error message and password prompt
 <div created="20200603090610712" modified="20200603092340405" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
-<div title="$:/status/RequireReloadDueToPluginChange">
-<pre>yes</pre>
+<div created="20200603093942425" modified="20200603094030187" title="$:/state/tabs/controlpanel/toolbars-1345989671">
+<pre>$:/core/ui/ControlPanel/Toolbars/EditToolbar</pre>
 </div>
-<div created="20200603092229535" list="" modified="20200603093006198" title="$:/StoryList">
+<div title="$:/status/RequireReloadDueToPluginChange">
+<pre>no</pre>
+</div>
+<div created="20200603093815683" list="$:/ControlPanel GettingStarted" modified="20200603093815683" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
