--- a/wiki/index.html
+++ b/wiki/index.html
@@ -225,6 +225,10 @@ Error message and password prompt
 
 <li>3rd June 2020</li>
 
+<li>Draft of 'Live Coding'</li>
+
+<li>Live Coding</li>
+
 <li>New Tiddler</li>
 
 </ul>
@@ -10685,14 +10689,14 @@ Error message and password prompt
 <div created="20200603085337939" modified="20200603093009259" title="$:/state/plugin-info-749868030-$:/plugins/rmnvsl/krystal---432838930">
 <pre>readme</pre>
 </div>
-<div created="20200603093824963" modified="20200603093828804" title="$:/state/tab--1963855381">
+<div created="20200603093824963" modified="20200603094458561" title="$:/state/tab--1963855381">
 <pre>$:/core/ui/ControlPanel/Toolbars</pre>
 </div>
 <div created="20200603092327596" modified="20200603092330476" title="$:/state/tab--2112689675">
 <pre>$:/core/ui/ControlPanel/Basics</pre>
 </div>
-<div created="20200603084519756" modified="20200603094035327" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Plugins</pre>
+<div created="20200603084519756" modified="20200603094530840" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
 <div created="20200603084521283" modified="20200603092804309" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/General</pre>
@@ -10700,13 +10704,13 @@ Error message and password prompt
 <div created="20200603090610712" modified="20200603092340405" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
-<div created="20200603093942425" modified="20200603094030187" title="$:/state/tabs/controlpanel/toolbars-1345989671">
-<pre>$:/core/ui/ControlPanel/Toolbars/EditToolbar</pre>
+<div created="20200603093942425" modified="20200603094507082" title="$:/state/tabs/controlpanel/toolbars-1345989671">
+<pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200603093815683" list="$:/ControlPanel GettingStarted" modified="20200603093815683" title="$:/StoryList">
+<div created="20200603094249096" list="$:/ControlPanel [[Draft of 'Live Coding']] KodeLife" modified="20200603094644356" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10878,6 +10882,68 @@ Error message and password prompt
 </div>
 <div created="20200603092811474" modified="20200603092821079" tags="Journal" title="3rd June 2020">
 <pre>Testing</pre>
+</div>
+<div created="20200603094139854" draft.of="Live Coding" draft.title="Live Coding" modified="20200603094654909" tags="live-coding" title="Draft of 'Live Coding'" type="text/vnd.tiddlywiki">
+<pre>* Sonic Pi Forum: https://in-thread.sonic-pi.net/
+* Sonic Pi On Stack Overflow Blog: https://stackoverflow.blog/2020/01/29/the-live-coding-language-that-lets-you-be-an-actual-rock-star/
+* Kortex: https://mindbuffer.net/kortex
+* ImiTone https://www.kickstarter.com/projects/evanbalster/imitone-mind-to-melody
+* GridSound: https://gridsound.com/#/
+* Audio Vis: https://github.com/willianjusten/awesome-audio-visualization
+* Software for Graphics Thread on lines: https://llllllll.co/t/software-to-create-procedural-graphics/27660/10
+* Hydra Book https://naotohieda.com/blog/hydra-book/
+* Interactive Shader Format: https://www.interactiveshaderformat.com/
+* Lua + OSC bindings for Open Frameworks https://github.com/danomatika/loaf
+* EarSketch, Georgia Tech: https://earsketch.gatech.edu/landing/#/
+* xi LiveCode: https://github.com/xi-livecode/xi
+* Sequencer, unknown demo from HMH: https://www.youtube.com/watch?v=x7c-9dXZouo&amp;feature=youtu.be
+* Sketch Synth: https://github.com/jeonghopark/SketchSynth-Simple
+* Live coding in Rust: https://nannou.cc/
+* KodeLife: https://hexler.net/products/kodelife
+* Future Of Coding projects: https://github.com/pel-daniel/mind-bicycles
+* Alive Coding: https://s-ol.nu/alivecoding
+* Max MSP: https://cycling74.com/products/max/
+* WDL-OL for VST: https://github.com/justinfrankel/WDL
+* PureData: http://msp.ucsd.edu/Pd_documentation/
+* Layered Graph Drawing: https://en.wikipedia.org/wiki/Layered_graph_drawing
+* Automatic graph layout: https://en.wikipedia.org/wiki/Microsoft_Automatic_Graph_Layout
+* CEPL https://github.com/cbaggers/cepl
+* Projection Boxes: http://cseweb.ucsd.edu/~lerner/papers/projection-boxes-chi2020.pdf
+* Glamorous Toolkit: https://gtoolkit.com/
+* Cellular Automation Demo: https://movablefeastmachine.org/
+* ShaderToy launcher for Vulkan: https://github.com/danilw/vulkan-shadertoy-launcher
+* Fe: https://github.com/rxi/fe</pre>
+</div>
+<div created="20200603094139854" modified="20200603094638718" tags="live-coding" title="Live Coding" type="text/vnd.tiddlywiki">
+<pre>* Sonic Pi Forum: https://in-thread.sonic-pi.net/
+* Sonic Pi On Stack Overflow Blog: https://stackoverflow.blog/2020/01/29/the-live-coding-language-that-lets-you-be-an-actual-rock-star/
+* Kortex: https://mindbuffer.net/kortex
+* ImiTone https://www.kickstarter.com/projects/evanbalster/imitone-mind-to-melody
+* GridSound: https://gridsound.com/#/
+* Audio Vis: https://github.com/willianjusten/awesome-audio-visualization
+* Software for Graphics Thread on lines: https://llllllll.co/t/software-to-create-procedural-graphics/27660/10
+* Hydra Book https://naotohieda.com/blog/hydra-book/
+* Interactive Shader Format: https://www.interactiveshaderformat.com/
+* Lua + OSC bindings for Open Frameworks https://github.com/danomatika/loaf
+* EarSketch, Georgia Tech: https://earsketch.gatech.edu/landing/#/
+* xi LiveCode: https://github.com/xi-livecode/xi
+* Sequencer, unknown demo from HMH: https://www.youtube.com/watch?v=x7c-9dXZouo&amp;feature=youtu.be
+* Sketch Synth: https://github.com/jeonghopark/SketchSynth-Simple
+* Live coding in Rust: https://nannou.cc/
+* KodeLife: https://hexler.net/products/kodelife
+* Future Of Coding projects: https://github.com/pel-daniel/mind-bicycles
+* Alive Coding: https://s-ol.nu/alivecoding
+* Max MSP: https://cycling74.com/products/max/
+* WDL-OL for VST: https://github.com/justinfrankel/WDL
+* PureData: http://msp.ucsd.edu/Pd_documentation/
+* Layered Graph Drawing: https://en.wikipedia.org/wiki/Layered_graph_drawing
+* Automatic graph layout: https://en.wikipedia.org/wiki/Microsoft_Automatic_Graph_Layout
+* CEPL https://github.com/cbaggers/cepl
+* Projection Boxes: http://cseweb.ucsd.edu/~lerner/papers/projection-boxes-chi2020.pdf
+* Glamorous Toolkit: https://gtoolkit.com/
+* Cellular Automation Demo: https://movablefeastmachine.org/
+* ShaderToy launcher for Vulkan: https://github.com/danilw/vulkan-shadertoy-launcher
+* Fe: https://github.com/rxi/fe</pre>
 </div>
 <div created="20200603092341586" modified="20200603092347144" tags="" title="New Tiddler">
 <pre></pre>
