--- a/wiki/index.html
+++ b/wiki/index.html
@@ -225,13 +225,9 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla</li>
 
-<li>$:/themes/tiddlywiki/vanilla/metrics/storywidth</li>
-
-<li>$:/themes/tiddlywiki/vanilla/metrics/tiddlerwidth</li>
-
-<li>$:/themes/tiddlywiki/vanilla/options/sidebarlayout</li>
-
 <li>3rd June 2020</li>
+
+<li>Draft of 'Live Coding'</li>
 
 <li>Live Coding</li>
 
@@ -9675,9 +9671,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200603094843090" modified="20200603094900997" title="$:/DefaultTiddlers">
+<div created="20200603100808597" modified="20200603100812055" title="$:/DefaultTiddlers">
 <pre>[[Live Coding]]
-
 </pre>
 </div>
 <div created="20200603084653595" modified="20200603084654884" title="$:/GitHub/Filename">
@@ -10700,14 +10695,14 @@ Error message and password prompt
 <div created="20200603085337939" modified="20200603093009259" title="$:/state/plugin-info-749868030-$:/plugins/rmnvsl/krystal---432838930">
 <pre>readme</pre>
 </div>
-<div created="20200603093824963" modified="20200603095028504" title="$:/state/tab--1963855381">
-<pre>$:/themes/tiddlywiki/vanilla/themetweaks</pre>
+<div created="20200603093824963" modified="20200603094458561" title="$:/state/tab--1963855381">
+<pre>$:/core/ui/ControlPanel/Toolbars</pre>
 </div>
 <div created="20200603092327596" modified="20200603092330476" title="$:/state/tab--2112689675">
 <pre>$:/core/ui/ControlPanel/Basics</pre>
 </div>
-<div created="20200603084519756" modified="20200603095027075" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Appearance</pre>
+<div created="20200603084519756" modified="20200603094530840" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
 <div created="20200603084521283" modified="20200603092804309" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/General</pre>
@@ -10891,54 +10886,70 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200603095051289" modified="20200603100626428" title="$:/themes/tiddlywiki/vanilla/metrics/storywidth">
-<pre>1200px</pre>
-</div>
-<div created="20200603095102872" modified="20200603100630004" title="$:/themes/tiddlywiki/vanilla/metrics/tiddlerwidth">
-<pre>1024px</pre>
-</div>
-<div created="20200603100606832" modified="20200603100606832" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout">
-<pre>fluid-fixed</pre>
-</div>
 <div created="20200603092811474" modified="20200603092821079" tags="Journal" title="3rd June 2020">
 <pre>Testing</pre>
 </div>
-<div created="20200603094139854" modified="20200603100547421" tags="live-coding" title="Live Coding" type="text/vnd.tiddlywiki">
-<pre>Sonic Pi Forum https://in-thread.sonic-pi.net/
-
-Sonic Pi On Stack Overflow Blog https://stackoverflow.blog/2020/01/29/the-live-coding-language-that-lets-you-be-an-actual-rock-star/ 
-
-Kortex https://mindbuffer.net/kortex
-
-Imi Tone https://www.kickstarter.com/projects/evanbalster/imitone-mind-to-melody
-
-Grid Sound https://gridsound.com/#/ 
-
-Audio Vis https://github.com/willianjusten/awesome-audio-visualization
-
-Software for Graphics Thread on lines: https://llllllll.co/t/software-to-create-procedural-graphics/27660/10
-HydraBook https://naotohieda.com/blog/hydra-book/
-InteractiveShader Format: https://www.interactiveshaderformat.com/
-Lua + OSC bindings for Open Frameworks https://github.com/danomatika/loaf
-EarSketch, Georgia Tech: https://earsketch.gatech.edu/landing/#/
-xi LiveCode: https://github.com/xi-livecode/xi
-Sequencer, unknown demo from HMH: https://www.youtube.com/watch?v=x7c-9dXZouo&amp;feature=youtu.be
-SketchSynth: https://github.com/jeonghopark/SketchSynth-Simple
-Live coding in Rust: https://nannou.cc/
-KodeLife: https://hexler.net/products/kodelife
-Future Of Coding projects: https://github.com/pel-daniel/mind-bicycles
-Alive Coding: https://s-ol.nu/alivecoding
-MaxMSP: https://cycling74.com/products/max/
-WDL-OL for VST: https://github.com/justinfrankel/WDL
-PureData: http://msp.ucsd.edu/Pd_documentation/
-Layered Graph Drawing: https://en.wikipedia.org/wiki/Layered_graph_drawing
-Automatic graph layout: https://en.wikipedia.org/wiki/Microsoft_Automatic_Graph_Layout
-CEPL https://github.com/cbaggers/cepl
-ProjectionBoxes: http://cseweb.ucsd.edu/~lerner/papers/projection-boxes-chi2020.pdf
-GlamorousToolkit: https://gtoolkit.com/
-Cellular Automation Demo: https://movablefeastmachine.org/
-ShaderToy launcher for Vulkan: https://github.com/danilw/vulkan-shadertoy-launcher
-Fe: | https://github.com/rxi/fe</pre>
+<div created="20200603094139854" draft.of="Live Coding" draft.title="Live Coding" modified="20200603094654909" tags="live-coding" title="Draft of 'Live Coding'" type="text/vnd.tiddlywiki">
+<pre>* Sonic Pi Forum: https://in-thread.sonic-pi.net/
+* Sonic Pi On Stack Overflow Blog: https://stackoverflow.blog/2020/01/29/the-live-coding-language-that-lets-you-be-an-actual-rock-star/
+* Kortex: https://mindbuffer.net/kortex
+* ImiTone https://www.kickstarter.com/projects/evanbalster/imitone-mind-to-melody
+* GridSound: https://gridsound.com/#/
+* Audio Vis: https://github.com/willianjusten/awesome-audio-visualization
+* Software for Graphics Thread on lines: https://llllllll.co/t/software-to-create-procedural-graphics/27660/10
+* Hydra Book https://naotohieda.com/blog/hydra-book/
+* Interactive Shader Format: https://www.interactiveshaderformat.com/
+* Lua + OSC bindings for Open Frameworks https://github.com/danomatika/loaf
+* EarSketch, Georgia Tech: https://earsketch.gatech.edu/landing/#/
+* xi LiveCode: https://github.com/xi-livecode/xi
+* Sequencer, unknown demo from HMH: https://www.youtube.com/watch?v=x7c-9dXZouo&amp;feature=youtu.be
+* Sketch Synth: https://github.com/jeonghopark/SketchSynth-Simple
+* Live coding in Rust: https://nannou.cc/
+* KodeLife: https://hexler.net/products/kodelife
+* Future Of Coding projects: https://github.com/pel-daniel/mind-bicycles
+* Alive Coding: https://s-ol.nu/alivecoding
+* Max MSP: https://cycling74.com/products/max/
+* WDL-OL for VST: https://github.com/justinfrankel/WDL
+* PureData: http://msp.ucsd.edu/Pd_documentation/
+* Layered Graph Drawing: https://en.wikipedia.org/wiki/Layered_graph_drawing
+* Automatic graph layout: https://en.wikipedia.org/wiki/Microsoft_Automatic_Graph_Layout
+* CEPL https://github.com/cbaggers/cepl
+* Projection Boxes: http://cseweb.ucsd.edu/~lerner/papers/projection-boxes-chi2020.pdf
+* Glamorous Toolkit: https://gtoolkit.com/
+* Cellular Automation Demo: https://movablefeastmachine.org/
+* ShaderToy launcher for Vulkan: https://github.com/danilw/vulkan-shadertoy-launcher
+* Fe: https://github.com/rxi/fe</pre>
+</div>
+<div created="20200603094139854" modified="20200603094638718" tags="live-coding" title="Live Coding" type="text/vnd.tiddlywiki">
+<pre>* Sonic Pi Forum: https://in-thread.sonic-pi.net/
+* Sonic Pi On Stack Overflow Blog: https://stackoverflow.blog/2020/01/29/the-live-coding-language-that-lets-you-be-an-actual-rock-star/
+* Kortex: https://mindbuffer.net/kortex
+* ImiTone https://www.kickstarter.com/projects/evanbalster/imitone-mind-to-melody
+* GridSound: https://gridsound.com/#/
+* Audio Vis: https://github.com/willianjusten/awesome-audio-visualization
+* Software for Graphics Thread on lines: https://llllllll.co/t/software-to-create-procedural-graphics/27660/10
+* Hydra Book https://naotohieda.com/blog/hydra-book/
+* Interactive Shader Format: https://www.interactiveshaderformat.com/
+* Lua + OSC bindings for Open Frameworks https://github.com/danomatika/loaf
+* EarSketch, Georgia Tech: https://earsketch.gatech.edu/landing/#/
+* xi LiveCode: https://github.com/xi-livecode/xi
+* Sequencer, unknown demo from HMH: https://www.youtube.com/watch?v=x7c-9dXZouo&amp;feature=youtu.be
+* Sketch Synth: https://github.com/jeonghopark/SketchSynth-Simple
+* Live coding in Rust: https://nannou.cc/
+* KodeLife: https://hexler.net/products/kodelife
+* Future Of Coding projects: https://github.com/pel-daniel/mind-bicycles
+* Alive Coding: https://s-ol.nu/alivecoding
+* Max MSP: https://cycling74.com/products/max/
+* WDL-OL for VST: https://github.com/justinfrankel/WDL
+* PureData: http://msp.ucsd.edu/Pd_documentation/
+* Layered Graph Drawing: https://en.wikipedia.org/wiki/Layered_graph_drawing
+* Automatic graph layout: https://en.wikipedia.org/wiki/Microsoft_Automatic_Graph_Layout
+* CEPL https://github.com/cbaggers/cepl
+* Projection Boxes: http://cseweb.ucsd.edu/~lerner/papers/projection-boxes-chi2020.pdf
+* Glamorous Toolkit: https://gtoolkit.com/
+* Cellular Automation Demo: https://movablefeastmachine.org/
+* ShaderToy launcher for Vulkan: https://github.com/danilw/vulkan-shadertoy-launcher
+* Fe: https://github.com/rxi/fe</pre>
 </div>
 <div created="20200603092341586" modified="20200603092347144" tags="" title="New Tiddler">
 <pre></pre>
